[package]
name = "mimxrt1024"
version = "0.1.0"
edition = "2021"
description = "Peripheral access API for MIMXRT1024 microcontrollers"
authors = ["Andrew Hoddinott <ajh@golter.jp>"]
license = "BSD-3-Clause"
homepage = "https://github.com/ajhoddinott/mimxrt1024-rs"
repository = "https://github.com/ajhoddinott/mimxrt1024-rs"
keywords = ["nxp", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
exclude = ["svd/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
critical-section = "1.1.1"
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
